--- a/style.css
+++ b/style.css
@@ -1,35 +1,190 @@
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Comforter&family=Dancing+Script&family=Estonia&family=Praise&display=swap');
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: indigo;
+    margin: 0;
+    padding: 0;
+}
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black;
+    color: white;
+    padding: 20px;
+}
+header h1 {
+     text-transform: uppercase;
+     font-family: "architects daughter", Monaco;
+}
+.menu a{
+     color: lightslategray;
+     text-decoration: none;
+     font-weight: bolder;
+     font-size: large;
+     transition: 0.5s all;
+     margin-right: 20px;
+     font-family: "architects daughter", Monaco;
+}
+.menu a:last-of-type {
+     margin-right: 0;
+}
+.menu a:hover{
+     color: dimgray;
 }
 .maincontent {
     width: 80%;
     max-width: 1400px;
-    margin: 50px 10%;
+    margin-top: 50px;
+    margin-left:  10%;
+    margin-right:  10%;
+    background-color: black;
+}
+.heroContener {
+    position: relative;
+    overflow: auto;
+}
+.heroContener::before {
+    content: "";
+    background-image: url(developbg.jpg);
+    opacity: 0.6;
+    background-size: 100% 100%;
+      position: absolute;
+      top: 0px;
+      right: 0px;
+      bottom: 0px;
+      left: 0px;
+    
+    z-index: 0;
+}
+.hero {
+    padding: 10px 0px;
+    width: 50%;
+    margin: 60px 25% 80px 25%;
+    border-left: 6px solid white;
+    position: relative;
+    z-index: 1;
+}
+.hero h1, .hero h3, .hero h4 {
+    color: white;
+    margin-left: 15px;
+}
+.hero button {
+    background-color: black;
+    border: 2px solid yellowgreen;
+    color: white;
+    padding: 10px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 5px 10px;
+    cursor: pointer;
+}
+.aboutMe{
     background-color: white;
+    width: 100%;
+    padding: 55px;
 }
-header {
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   background-color: black;
-   color: white;
-   padding: 20px;
-   
+
+.aboutMe h2 {
+    margin-top: 0px;
 }
-header h1 {
+.aboutMe h3 {
     text-transform: uppercase;
 }
-.menu a{
-    color: lightslategray;
-    text-decoration: none;
-    font-weight: bolder;
-    font-size: large;
-    transition: 0.5s all;
-    margin-right: 20px;
+.aboutMe > h3 span {
+    border-bottom: 5px solid yellow
 }
-.menu a:last-of-type {
-    margin-right: 0;
+.pic img {
+    width: 350px;
+    height: 300px;
+    /*padding: 30px 5px;*/
+    object-fit: cover;
 }
-.menu a:hover{
-    color: dimgray;
+.pic {
+    display: flex;
+    background-color: white;  
+}
+.pic > div {
+    margin: 25px 5px 25px 25px;
+}
+.pic div span {
+    color: yellow;
+}
+
+.web img {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+}
+.contact {
+    display: flex;
+    margin-left: 15px;
+    gap:40px
+}
+.contact div:first-of-type{
+    flex: 4;
+}
+.contact div:last-of-type{
+    flex: 3;
+}
+.contact p {
+    border-bottom: 2px solid black;
+}
+footer {
+    background-color: #000;
+    height: 50px;
+}
+footer p {
+    text-align: center;
+    padding: 10px;
+    color: #fff
+}
+#mobilemenu {
+    display: none;
+}
+@media screen and (max-width: 1280px){
+    .maincontent {
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+    }
+    .pic {
+        flex-direction: column;
+        align-items: center;
+    }
+    .text p {
+        text-align: left;
+        width: 60%;
+    }   
+}
+@media screen and (max-width: 400px){
+    .menu {
+        display: none;
+    }
+    #mobilemenu {
+        display: flex;
+    }
+    #mobilemenu img {
+        width: 50px;
+        height: 50px;
+    }
+    .maincontent {
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+    }
+    .pic {
+        flex-direction: column;
+        align-items: center;
+    }
+    .text p {
+        width: 100%;
+    }
+    
+        
 }
